# tabby-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.md  readme.md  todo.md
include/: tabby.h
include/tabby/: application.h  defines.h  event.h  event_application.h  event_key.h  event_mouse.h  input.h  input_key_code.h  log.h  profiling.h  subsystem.h  time.h  window.h  window_manager.h
include/tabby/imgui/: imgui.h  imgui_stdlib.h
src/: application.cpp  entrypoint.cpp  imgui_renderer.cpp  imgui_renderer.h  input.cpp  log.cpp  tbpch.h  time.cpp  window.cpp  window_manager.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
src/imgui/backends/: imgui_impl_bgfx.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h
src/imgui/misc/cpp/: imgui_stdlib.cpp
src/imgui/misc/single_file/: imgui_single_file.h
